fix avatar on mobile

--- a/app/assets/stylesheets/pages/_product.scss
+++ b/app/assets/stylesheets/pages/_product.scss
@@ -33,6 +33,10 @@ h4.sub-heading {
   }
   .avatar-rating {
     display: flex;
+    img {
+      width: 40px;
+      height: 40px;
+    }
   }
   .stars-nickname {
     display: flex;
